align listings, fix reverse sort

--- a/Products/PloneSoftwareCenter/browser/stylesheets/psc.css
+++ b/Products/PloneSoftwareCenter/browser/stylesheets/psc.css
@@ -61,5 +61,6 @@ table.release_table .release-description{
     width: 60%;
 }
 
-.product-details{
+.downloads li{
+    vertical-align: top;
 }
